# SlayTheTire

./: .gitignore  README.md  SlayTheTire.cabal  shell.nix  slay.cabal  stack.yaml
app/: Cards.hs  DataTypes.hs  Enemies.hs  Main.hs
