name:                SlayTheTire
version:             0.1.0.0
synopsis:            Toy Game
description:         Please see README.md
homepage:            
license:             Apache-2.0
license-file:        LICENSE
author:              Alex Krusz
maintainer:          
copyright:           
category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


executable slay
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
		     , safe
  default-language:    Haskell2010
